--- a/data_pipeline/analysis/explore_raw_data.ipynb
+++ b/data_pipeline/analysis/explore_raw_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "42abb91e",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
     "pd.set_option('display.max_colwidth', None)\n",
     "\n",
     "# Đường dẫn thư mục chứa file\n",
-    "RAW_PATH = \"/Users/nthanhdat/Documents/Fpt_Polytechnic/Graduation_Project/data_pipeline/raw_data\"\n",
+    "RAW_PATH = \"D:\\\\E\\\\raw_data\"\n",
     "\n",
     "def load_and_prepare(files, drop_airline=False, drop_is_duplicate=False):\n",
     "    dfs = []\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "32c8c991",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "05db1619",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "575b8092",
    "metadata": {},
    "outputs": [
@@ -164,24 +164,281 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b6a05137",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2255788 entries, 0 to 2255787\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column                  Dtype  \n",
+      "---  ------                  -----  \n",
+      " 0   date                    object \n",
+      " 1   route                   object \n",
+      " 2   flight_id               object \n",
+      " 3   origin                  object \n",
+      " 4   destination             object \n",
+      " 5   fare_class              object \n",
+      " 6   fare_code               object \n",
+      " 7   price_vnd               float64\n",
+      " 8   taxes                   float64\n",
+      " 9   booking_class           object \n",
+      " 10  cabin                   object \n",
+      " 11  quota                   float64\n",
+      " 12  service_code            object \n",
+      " 13  fare_conditions         object \n",
+      " 14  operating_airline_code  object \n",
+      " 15  operating_airline_name  object \n",
+      "dtypes: float64(3), object(13)\n",
+      "memory usage: 275.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_all.info()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8ad424aa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Ép kiểu cột date về datetime\n",
+    "df_all['date'] = pd.to_datetime(df_all['date'], errors='coerce')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1da73b77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tạo cột giờ\n",
+    "df_all['hour'] = df_all['date'].dt.hour\n",
+    "\n",
+    "# Tạo cột \"khoảng thời gian bay\"\n",
+    "def get_time_slot(hour):\n",
+    "    if 5 <= hour < 12:\n",
+    "        return 'Sáng'\n",
+    "    elif 12 <= hour < 17:\n",
+    "        return 'Chiều'\n",
+    "    elif 17 <= hour < 21:\n",
+    "        return 'Tối'\n",
+    "    else:\n",
+    "        return 'Đêm'\n",
+    "\n",
+    "df_all['time_slot'] = df_all['hour'].apply(get_time_slot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7841e51a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tổng số chuyến bay: 2255788\n",
+      "\n",
+      "Số chuyến theo hãng:\n",
+      "operating_airline_name\n",
+      "VietNam Airlines    1164507\n",
+      "Vietjet Air         1067108\n",
+      "BAMBOO AIRWAYS        23790\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Thống kê giá vé (price_vnd):\n",
+      "count    2.255405e+06\n",
+      "mean     4.644202e+06\n",
+      "std      3.051185e+06\n",
+      "min      4.107838e+05\n",
+      "25%      2.448000e+06\n",
+      "50%      3.849000e+06\n",
+      "75%      5.996006e+06\n",
+      "max      1.592100e+07\n",
+      "Name: price_vnd, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Số chuyến bay tổng cộng\n",
+    "print(\"Tổng số chuyến bay:\", len(df_all))\n",
+    "\n",
+    "# Số chuyến theo hãng\n",
+    "print(\"\\nSố chuyến theo hãng:\")\n",
+    "print(df_all['operating_airline_name'].value_counts())\n",
+    "\n",
+    "# Thống kê giá vé\n",
+    "print(\"\\nThống kê giá vé (price_vnd):\")\n",
+    "print(df_all['price_vnd'].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bc293aa4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Đảm bảo date đã đúng kiểu datetime\n",
+    "df_all['date'] = pd.to_datetime(df_all['date'], errors='coerce')\n",
+    "\n",
+    "# Thêm các cột thời gian\n",
+    "df_all['month'] = df_all['date'].dt.month\n",
+    "df_all['weekday'] = df_all['date'].dt.day_name()\n",
+    "df_all['week'] = df_all['date'].dt.isocalendar().week"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "64045b1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Giá vé trung bình theo tháng:\n",
+      "month\n",
+      "1.0     3344166.0\n",
+      "2.0     3995363.0\n",
+      "3.0     3406687.0\n",
+      "4.0     3349370.0\n",
+      "5.0     3333594.0\n",
+      "6.0     2652879.0\n",
+      "7.0     2562875.0\n",
+      "8.0     2564037.0\n",
+      "9.0     2571280.0\n",
+      "10.0    2608576.0\n",
+      "11.0    2665188.0\n",
+      "12.0    2673173.0\n",
+      "Name: price_vnd, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nGiá vé trung bình theo tháng:\")\n",
+    "print(df_all.groupby('month')['price_vnd'].mean().round(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4c122a27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Giá vé trung bình theo ngày trong tuần:\n",
+      "weekday\n",
+      "Friday       2833743.0\n",
+      "Monday       2790339.0\n",
+      "Saturday     2788286.0\n",
+      "Sunday       2881056.0\n",
+      "Thursday     2775568.0\n",
+      "Tuesday      2736647.0\n",
+      "Wednesday    2728504.0\n",
+      "Name: price_vnd, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nGiá vé trung bình theo ngày trong tuần:\")\n",
+    "print(df_all.groupby('weekday')['price_vnd'].mean().round(0))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7817bb5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Giá vé trung bình theo tuần:\n",
+      "week\n",
+      "1     2943236.0\n",
+      "2     3299986.0\n",
+      "3     3376702.0\n",
+      "4     3371631.0\n",
+      "5     3617389.0\n",
+      "6     3925365.0\n",
+      "7     3920435.0\n",
+      "8     4287099.0\n",
+      "9     3997641.0\n",
+      "10    3448884.0\n",
+      "11    3369223.0\n",
+      "12    3372469.0\n",
+      "13    3368340.0\n",
+      "14    3347177.0\n",
+      "15    3346089.0\n",
+      "16    3346985.0\n",
+      "17    3351993.0\n",
+      "18    3355261.0\n",
+      "19    3348176.0\n",
+      "20    3348420.0\n",
+      "21    3332054.0\n",
+      "22    2920749.0\n",
+      "23    2633707.0\n",
+      "24    2690329.0\n",
+      "25    2671333.0\n",
+      "26    2610581.0\n",
+      "27    2574673.0\n",
+      "28    2576106.0\n",
+      "29    2568302.0\n",
+      "30    2555714.0\n",
+      "31    2557170.0\n",
+      "32    2584649.0\n",
+      "33    2524901.0\n",
+      "34    2515611.0\n",
+      "35    2624998.0\n",
+      "36    2663373.0\n",
+      "37    2546230.0\n",
+      "38    2556816.0\n",
+      "39    2543321.0\n",
+      "40    2588707.0\n",
+      "41    2589535.0\n",
+      "42    2602873.0\n",
+      "43    2614807.0\n",
+      "44    2654876.0\n",
+      "45    2658449.0\n",
+      "46    2660212.0\n",
+      "47    2668809.0\n",
+      "48    2656397.0\n",
+      "49    2671626.0\n",
+      "50    2661428.0\n",
+      "51    2673795.0\n",
+      "52    2672254.0\n",
+      "Name: price_vnd, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nGiá vé trung bình theo tuần:\")\n",
+    "print(df_all.groupby('week')['price_vnd'].mean().round(0))\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1da73b77",
+   "id": "761126eb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -203,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
