--- a/data_pipeline/preprocessing/data_sql.ipynb
+++ b/data_pipeline/preprocessing/data_sql.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8626adc9",
+   "id": "a79f38c7",
    "metadata": {},
    "outputs": [
     {
@@ -15,15 +15,7 @@
       "📄 Đang đọc file: E:\\DATA-PROCESSING\\Du_an_tot_nghiep\\raw_data\\raw_data\\VNairlines_1_1.csv\n",
       "📄 Đang đọc file: E:\\DATA-PROCESSING\\Du_an_tot_nghiep\\raw_data\\raw_data\\VNairlines_2_2.csv\n",
       "📄 Đang đọc file: E:\\DATA-PROCESSING\\Du_an_tot_nghiep\\raw_data\\raw_data\\BambooAirway.csv\n",
-      "✅ Hãng bay có trong dữ liệu: ['Vietjet Air' 'Vietnam Airlines' 'BAMBOO AIRWAYS']\n",
-      "✅ Đã lưu file sạch: E:\\DATA-PROCESSING\\Du_an_tot_nghiep\\airline_cleaned_clean.csv\n",
-      "\n",
-      "📊 Số lượng chuyến bay theo hãng:\n",
-      "airline\n",
-      "Vietnam Airlines    1164507\n",
-      "Vietjet Air         1067108\n",
-      "BAMBOO AIRWAYS        23790\n",
-      "Name: count, dtype: int64\n"
+      "✅ Đã lưu file hoàn chỉnh: E:\\DATA-PROCESSING\\Du_an_tot_nghiep\\airline_cleaned3_fulldata.csv\n"
      ]
     }
    ],
@@ -48,14 +40,13 @@
     "        df = pd.read_csv(full_path)\n",
     "        df.columns = df.columns.str.strip().str.lower().str.replace(\" \", \"_\")\n",
     "\n",
-    "        # Thêm tên hãng nếu thiếu\n",
     "        if \"airline\" not in df.columns and airline_name:\n",
     "            df[\"airline\"] = airline_name\n",
     "\n",
     "        dfs.append(df)\n",
     "    return pd.concat(dfs, ignore_index=True)\n",
     "\n",
-    "# 🛫 Load từng hãng\n",
+    "# 🛫 Load từng hãng bay\n",
     "df_vietjet = load_and_prepare([\"vietjet_1.csv\", \"vietjet_2.csv\"], airline_name=\"Vietjet Air\")\n",
     "df_vnairlines = load_and_prepare([\"VNairlines_1_1.csv\", \"VNairlines_2_2.csv\"], airline_name=\"Vietnam Airlines\")\n",
     "df_bamboo = load_and_prepare([\"BambooAirway.csv\"], airline_name=\"BAMBOO AIRWAYS\")\n",
@@ -63,22 +54,19 @@
     "# 🔗 Gộp toàn bộ dữ liệu\n",
     "df_all = pd.concat([df_vietjet, df_vnairlines, df_bamboo], ignore_index=True)\n",
     "\n",
-    "# 📊 Kiểm tra hãng bay\n",
-    "print(\"✅ Hãng bay có trong dữ liệu:\", df_all[\"airline\"].unique())\n",
-    "\n",
-    "# ✂️ Xóa các cột không cần thiết nếu có\n",
+    "# ✂️ Xoá các cột không cần thiết nếu có\n",
     "cols_to_drop = ['source.name', 'departure_time', 'arrival_time', 'status']\n",
     "df_all.drop(columns=[col for col in cols_to_drop if col in df_all.columns], inplace=True)\n",
     "\n",
     "# 📆 Chuyển đổi cột ngày\n",
     "df_all['flight_date'] = pd.to_datetime(df_all['date'], errors='coerce')\n",
     "\n",
-    "# ✈️ Tách flight_code và flight_number đúng cách\n",
+    "# ✈️ Tách flight_code và flight_number\n",
     "def split_flight_id(fid):\n",
     "    try:\n",
     "        parts = fid.split(\"-\")\n",
-    "        flight_code = parts[1]  # Ví dụ: \"VJ568\"\n",
-    "        flight_number = ''.join(filter(str.isdigit, flight_code))  # Lấy số: \"568\"\n",
+    "        flight_code = parts[1]\n",
+    "        flight_number = ''.join(filter(str.isdigit, flight_code))\n",
     "        return pd.Series([flight_code, flight_number])\n",
     "    except:\n",
     "        return pd.Series([None, None])\n",
@@ -92,7 +80,36 @@
     "df_all['dow'] = df_all['flight_date'].dt.dayofweek\n",
     "df_all['is_weekend'] = df_all['dow'].isin([5, 6]).astype(int)\n",
     "\n",
-    "# 🏙️ Map mã sân bay -> tên thành phố\n",
+    "# ✅ Tạo các ID\n",
+    "\n",
+    "# 1. Tạo flight_id mới (giữ lại flight_id gốc)\n",
+    "df_all.reset_index(inplace=True)\n",
+    "df_all.rename(columns={'index': 'flight_id', 'flight_id': 'original_flight_id', 'airline': 'airline_name'}, inplace=True)\n",
+    "\n",
+    "# 2. Tạo price_id\n",
+    "df_all['price_id'] = range(len(df_all))\n",
+    "\n",
+    "# 3. Tạo airline_id\n",
+    "dim_airline = pd.DataFrame(df_all['airline_name'].dropna().unique(), columns=['airline_name'])\n",
+    "dim_airline = dim_airline.sort_values(by='airline_name').reset_index(drop=True)\n",
+    "dim_airline['airline_id'] = dim_airline.index + 1\n",
+    "df_all = df_all.merge(dim_airline, on='airline_name', how='left')\n",
+    "\n",
+    "# 4. Tạo fare_class_id\n",
+    "dim_fare_class = pd.DataFrame(df_all['fare_class'].dropna().unique(), columns=['fare_class'])\n",
+    "dim_fare_class = dim_fare_class.sort_values(by='fare_class').reset_index(drop=True)\n",
+    "dim_fare_class['fare_class_id'] = dim_fare_class.index + 1\n",
+    "df_all = df_all.merge(dim_fare_class, on='fare_class', how='left')\n",
+    "\n",
+    "# 5. Tạo date_id\n",
+    "dim_date = pd.DataFrame(df_all['flight_date'].dropna().unique(), columns=['flight_date'])\n",
+    "dim_date = dim_date.sort_values(by='flight_date').reset_index(drop=True)\n",
+    "dim_date['date_id'] = dim_date.index + 1\n",
+    "df_all = df_all.merge(dim_date, on='flight_date', how='left')\n",
+    "\n",
+    "# 6. Gán origin_airport_id và dest_airport_id\n",
+    "\n",
+    "# Tạo bản đồ sân bay → thành phố\n",
     "airport_city_map = {\n",
     "    \"SGN\": \"Ho Chi Minh City\", \"HAN\": \"Hanoi\", \"DAD\": \"Da Nang\", \"CXR\": \"Nha Trang\",\n",
     "    \"HUI\": \"Hue\", \"DLI\": \"Da Lat\", \"PQC\": \"Phu Quoc\", \"VII\": \"Vinh\", \"VCA\": \"Can Tho\",\n",
@@ -103,21 +120,33 @@
     "    \"HPH\": \"Hai Phong\"\n",
     "}\n",
     "\n",
+    "# Tạo city từ origin (bản gốc)\n",
     "df_all['city'] = df_all['origin'].map(airport_city_map)\n",
     "\n",
-    "# 💵 Làm sạch cột giá vé\n",
-    "df_all['price_vnd'] = pd.to_numeric(df_all['price_vnd'], errors='coerce')\n",
-    "df_all = df_all.dropna(subset=['price_vnd'])\n",
-    "df_all['price_vnd'] = df_all['price_vnd'].round(0)\n",
+    "# Tạo bảng sân bay duy nhất\n",
+    "all_airports = pd.concat([\n",
+    "    df_all[['origin', 'city']].rename(columns={'origin': 'airport_code'}),\n",
+    "    df_all[['destination']].rename(columns={'destination': 'airport_code'}).assign(city=None)\n",
+    "], ignore_index=True).drop_duplicates(subset='airport_code')\n",
     "\n",
-    "# 💾 Xuất file kết quả\n",
-    "output_path = r\"E:\\DATA-PROCESSING\\Du_an_tot_nghiep\\airline_cleaned_clean.csv\"\n",
-    "df_all.to_csv(output_path, index=False, encoding=\"utf-8\")\n",
-    "print(f\"✅ Đã lưu file sạch: {output_path}\")\n",
+    "dim_airport = all_airports.drop_duplicates(subset='airport_code').sort_values('airport_code').reset_index(drop=True)\n",
+    "dim_airport['airport_id'] = dim_airport.index + 1\n",
     "\n",
-    "# 📈 Thống kê số lượng chuyến bay theo hãng\n",
-    "print(\"\\n📊 Số lượng chuyến bay theo hãng:\")\n",
-    "print(df_all[\"airline\"].value_counts())\n"
+    "# Gán origin_airport_id\n",
+    "df_all = df_all.merge(dim_airport.rename(columns={'airport_code': 'origin'}), on='origin', how='left')\n",
+    "df_all.rename(columns={'airport_id': 'origin_airport_id'}, inplace=True)\n",
+    "\n",
+    "# Gán dest_airport_id\n",
+    "df_all = df_all.merge(dim_airport.rename(columns={'airport_code': 'destination'}), on='destination', how='left')\n",
+    "df_all.rename(columns={'airport_id': 'dest_airport_id'}, inplace=True)\n",
+    "\n",
+    "# 🧹 Dọn dẹp cột trung gian thừa\n",
+    "df_all.drop(columns=['city_x', 'city_y', 'origin_city', 'destination_city'], errors='ignore', inplace=True)\n",
+    "\n",
+    "# 💾 Xuất file CSV hoàn chỉnh\n",
+    "final_output_path = r\"E:\\DATA-PROCESSING\\Du_an_tot_nghiep\\airline_cleaned3_fulldata.csv\"\n",
+    "df_all.to_csv(final_output_path, index=False, encoding=\"utf-8-sig\")\n",
+    "print(f\"✅ Đã lưu file hoàn chỉnh: {final_output_path}\")\n"
    ]
   }
  ],
